3.5
	+ Make Zentyal Ntp server default choice for ntp server in dhcp
	+ Set version to 3.5
3.4
	+ Fixed ThinClientOptions nextServer value for interfaces other than eth0
	+ More generic help message for thin clients options page
	+ Added HA floating IPs constraints when creating ranges and fixed IPs
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Added missing EBox::Exceptions uses
	+ Delete migration code from old versions
	+ Fixed regression which broke DHCP next-server options being written
	  to config (Contributed by on-jz)
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.4
	+ Override daemons when migrating from 3.0
3.1.3
	+ Removed integration with ltsp module
3.1.2
	+ Better warnings for fixed addresses objects with same member
	  name or mac
3.1.1
	+ Adapted to updatedRowNotify call with no changes in values
	+ Added menu icon
3.1
	+ Implemented _daemonsToDisable()
	+ Moved initRange and endRange methods to the network module to be shared.
	+ Added Pre-Depends on mysql-server to avoid problems with upgrades
	+ Depend on zentyal-core 3.1
3.0.3
	+ Allow access to /etc/ldap/ldap.conf on apparmor profile
	+ Fix generation of reverse zones, the host part of the addresses
	  was not removed
	+ Fixed bug which used all addresses available in a interface to
	  generate DNS reverse zone instead of the configured ranges
3.0.2
	+ Always write ddns keys file when saving changes
	+ Do not append trailing dot to key names
	+ Adapted to changes in EBox::LogHelper::_convertTimestamp
3.0.1
	+ Do not run daemon and show message when configuration does not
	  provide addresses for interfaces
	+ Ignore virtual interfaces
2.3.9
	+ Keys shared with bind are now stored under /etc/dhcp/ddns-keys
	+ Fixed problem in Options model which DNS domain syncRow call
	+ Fixed problems in DynamicDNS models
	+ Add dhcpd to the bind group if DynamicDNS is enabled