@@ -1,5 +1,7 @@
 3.5
-	+ Make Zentyal Ntp server default choice for ntp server in dhcp
+	+ Notify when we are using a Domain in Dynamic DNS when it is
+	  about to be removed
+	+ Make Zentyal NTP server default choice for ntp server in dhcp
 	+ Set version to 3.5
 3.4
 	+ Fixed ThinClientOptions nextServer value for interfaces other than eth0
